# Jet-Trail-Finder

./: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
src-tauri/: Cargo.toml  schema.rs  tauri.conf.json
src-tauri/db/migrations/2024-03-20-044350_user_info/: up.sql
src-tauri/db/migrations/2024-03-20-045504_flights/: down.sql  up.sql
src-tauri/src/: connect.rs  data.rs  main.rs  schema.rs  simconnect_listener.rs
src/app/: layout.tsx  page.tsx
src/app/login/: layout.tsx  page.tsx
src/app/test/: page.tsx
src/components/: video.tsx
